# tf_authoritative_scanner

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  gen_coverage.sh  pyproject.toml
.github/workflows/: main.yml
test_files/auth_in_name/: auth_in_name.tf
test_files/failing_1/: test.tf
test_files/failing_2/: test.tf
test_files/non-comment/: test.tf
test_files/ok/: test.tf
tf_authoritative_scanner/: scanner.py  scanner_2_test.py  scanner_test.py  util.py  util_test.py  wrapper.py  wrapper_test.py
