[tool.poetry]
name = "tf-authoritative-scanner"
version = "0.1.0"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tfas = "tf_authoritative_scanner.scanner:main"

[tool.ruff]
# default is 88
line-length = 120
