[tool.poetry]
name = "tf-authoritative-scanner"
version = "1.0.4"
description = ""
authors = ["Andrew Erickson <aerickson@mozilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
poetry-bumpversion = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tfas = "tf_authoritative_scanner.scanner:main"

[tool.ruff]
# default is 88
line-length = 120

[tool.poetry_bumpversion.file."tf_authoritative_scanner/__init__.py"]
